# auto_vectordb

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: server.py  task.py
backend/docs/parsed/google_openpaper/: Newwhitepaper_Agents.pkl  Newwhitepaper_Operationalizing Generative AI on Vertex AI.pkl  whitepaper_Embeddings & vector stores.pkl  whitepaper_Foundational Large Language models & text generation.pkl  whitepaper_Prompt Engineering_v4.pkl
backend/docs/parsed/project01/cat_01/cat_01_01/: FWG.pkl
backend/docs/parsed/project01/cat_02/cat_02_01/cat_02_01_01/: Unit_Cooler.pkl
backend/docs/pjt_007/cat_01/cat_01_01/: FWG.pkl
backend/docs/pjt_007/cat_02/cat_02_01/cat_02_01_01/: Unit_Cooler.pkl
backend/docs/project01/cat_01/cat_01_01/: FWG.pkl
backend/docs/project01/cat_02/cat_02_01/cat_02_01_01/: Unit_Cooler.pkl
backend/process/: elasticsearch_index.py  maria.py  parsing.py  postgres.py
backend/routers/: es_index.py  make_rdb.py  maria_rdb.py  parser.py  pg_rdb.py  upload.py
backend/utils/: config.py  schema.py
frontend/: app.py
frontend/utils/: style.py
